--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section id="about" class="py-20 bg-gray-800">
         <div class="container mx-auto px-4 slide-in">
             <div class="md:flex items-center">
-                <img src="LOGO CLOWN.jPG"
+                <img src="LOGO CLOWN.jpg"
                     class="w-full md:w-1/2 rounded-lg mb-6 md:mb-0 md:mr-8">
                 <div>
                     <h3 class="text-4xl font-bold mb-6">About CLOWN`S</h3>
@@ -341,4 +341,5 @@
 
 </html>
 </content>
+
 </create_file>
